--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,10 @@
 		<activity android:name=".UserMenu"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
-     
+        </activity>
+        <activity android:name=".farmersList"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
         </activity>
     </application>
 </manifest>
