--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,10 @@
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        <activity android:name=".Farmer"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
         <activity android:name=".findMarkets"
         		  android:label="@string/app_name"
         		  android:theme="@android:style/Theme.NoTitleBar">
