--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,5 +58,9 @@
         		  android:label="@string/app_name"
         		  android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        <activity android:name=".UserRegistration"
+        		  android:label="@string/app_name"
+        		  android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
     </application>
 </manifest>
