--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,11 @@
       package="com.communitymarket"
       android:versionCode="1"
       android:versionName="1.0">
-
+	
+	<uses-sdk
+		android:minSdkVersion="4"
+		android:targetSdkVersion="4"
+		android:maxSdkVersion="8" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".home"
