--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -89,5 +89,10 @@
         		  android:theme="@android:style/Theme.NoTitleBar"
         		  android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".Login"
+        		  android:label="@string/app_name"
+        		  android:theme="@android:style/Theme.NoTitleBar"
+        		  android:screenOrientation="portrait">
+        </activity>
     </application>
 </manifest>
