--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -89,6 +89,11 @@
         		  android:theme="@android:style/Theme.NoTitleBar"
         		  android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".editMarket"
+        		  android:label="@string/app_name"
+        		  android:theme="@android:style/Theme.NoTitleBar"
+        		  android:screenOrientation="portrait">
+        </activity>
         <activity android:name=".Login"
         		  android:label="@string/app_name"
         		  android:theme="@android:style/Theme.NoTitleBar"
